# LibrePCB

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/EagleImport/: CMakeLists.txt
apps/UuidGenerator/: CMakeLists.txt
apps/librepcb/: CMakeLists.txt
apps/librepcb-cli/: CMakeLists.txt
libs/: CMakeLists.txt
libs/librepcb/: CMakeLists.txt
libs/librepcb/common/: CMakeLists.txt  application.cpp  boarddesignrules.cpp  common.pro  gridproperties.h  signalrole.h  sqlitedatabase.cpp
libs/librepcb/common/attributes/: attribute.cpp  attributelistmodel.cpp
libs/librepcb/common/dialogs/: aboutdialog.cpp  boarddesignrulesdialog.cpp  gridsettingsdialog.cpp  polygonpropertiesdialog.cpp
libs/librepcb/common/fileio/: serializablekeyvaluemap.h  sexpression.cpp  sexpression.h  transactionalfilesystem.cpp
libs/librepcb/common/font/: strokefont.cpp
libs/librepcb/common/geometry/: pathmodel.cpp  stroketext.cpp  text.cpp  via.h
libs/librepcb/common/graphics/: graphicslayer.cpp  graphicsview.cpp
libs/librepcb/common/network/: filedownload.cpp  networkaccessmanager.cpp  networkrequest.cpp  networkrequestbase.cpp
libs/librepcb/common/utils/: graphicslayerstackappearancesettings.cpp
libs/librepcb/common/widgets/: angleedit.cpp  attributelisteditorwidget.cpp  graphicslayercombobox.cpp  lengthedit.cpp  lengtheditbase.cpp  numbereditbase.cpp  patheditorwidget.cpp  positivelengthedit.cpp  ratioedit.cpp  statusbar.cpp  unsignedlengthedit.cpp  unsignedratioedit.cpp
libs/librepcb/eagleimport/: CMakeLists.txt  eagleimport.pro
libs/librepcb/libraryeditor/: CMakeLists.txt  libraryeditor.pro
libs/librepcb/librarymanager/: CMakeLists.txt  librarymanager.pro
libs/librepcb/project/: CMakeLists.txt  project.cpp  project.pro
libs/librepcb/project/boards/: board.cpp  boardfabricationoutputsettings.cpp
libs/librepcb/project/boards/items/: bi_plane.cpp  bi_plane.h
libs/librepcb/project/circuit/: componentinstance.cpp
libs/librepcb/project/erc/: ercmsglist.cpp
libs/librepcb/project/metadata/: projectmetadata.cpp
libs/librepcb/project/settings/: projectsettings.cpp
libs/librepcb/projecteditor/: CMakeLists.txt  projecteditor.pro
libs/librepcb/projecteditor/boardeditor/: boardclipboarddata.h
libs/librepcb/projecteditor/schematiceditor/: schematicclipboarddata.h
libs/librepcb/workspace/: CMakeLists.txt  favoriteprojectsmodel.cpp  recentprojectsmodel.cpp  workspace.pro
libs/polyclipping/: CMakeLists.txt
tests/unittests/: unittests.pro
tests/unittests/common/: alignmenttest.cpp
tests/unittests/common/attributes/: attributekeytest.cpp  attributetest.cpp  attributetypetest.cpp  attributeunittest.cpp
tests/unittests/common/fileio/: serializableobjectlisttest.cpp  serializableobjectmock.h
tests/unittests/common/units/: angletest.cpp
tests/unittests/projecteditor/boardeditor/: boardclipboarddatatest.cpp
